--- a/app_coder/templates/app_coder/index.html
+++ b/app_coder/templates/app_coder/index.html
@@ -1,4 +1,18 @@
 {% extends "app_coder/padre.html" %}
 {% load static %}
 {% block contenidoQueCambia %}
+<header class="masthead text-center text-white">
+    <div class="masthead-content">
+        <div class="container px-5">
+            <h1 class="masthead-heading mb-0">Instituto de Idiomas</h1>
+            <h2 class="masthead-subheading mb-0">y centro de estudios</h2>
+            <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Empezá ya!</a>
+        </div>
+    </div>
+    <div class="bg-circle-1 bg-circle"></div>
+    <div class="bg-circle-2 bg-circle"></div>
+    <div class="bg-circle-3 bg-circle"></div>
+    <div class="bg-circle-4 bg-circle"></div>
+</header>
+<h2>{{mensaje}}</h2>
 {% endblock %}
