--- a/app_coder/templates/app_coder/padre.html
+++ b/app_coder/templates/app_coder/padre.html
@@ -34,7 +34,7 @@
             </div>
         </nav>
         <!-- Header-->
-        <header class="masthead text-center text-white">
+        <!-- <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">Instituto de Idiomas</h1>
@@ -46,7 +46,7 @@
             <div class="bg-circle-2 bg-circle"></div>
             <div class="bg-circle-3 bg-circle"></div>
             <div class="bg-circle-4 bg-circle"></div>
-        </header>
+        </header> -->
 
         <main>
             {% block contenidoQueCambia %}
