--- a/app_coder/static/app_coder/css/main.css
+++ b/app_coder/static/app_coder/css/main.css
@@ -7,6 +7,7 @@ header {
 }
 
 .cont {
+    height: 100vh;
     padding: 2rem;
     display: flex;
     flex-direction: column;
@@ -14,7 +15,6 @@ header {
     align-items: center;
     background-color: #FF6802;
 }
-
 .title {
     color: #fff;
     font-size: 3rem;
