--- a/app_coder/templates/app_coder/curso_detalle.html
+++ b/app_coder/templates/app_coder/curso_detalle.html
@@ -1,24 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso Detalle</title>
-</head>
-<body>
-    <p>
-        Nombre del curso: <i>{{curso.nombre}}</i>
-    </p>
-
-    <p>
-        Camada: <i>{{ curso.camada}}</i> 
-    </p>
-
-    <p>
-        <a href="{% url 'List' %}">Regresar</a>
-    </p>
+{% extends "app_coder/padre.html" %}
+{% load static %}
+{% block contenidoQueCambia %}
 
 
-</body>
-</html>
+<style>
+    a{
+        text-decoration: none;
+        margin: 1rem;
+        padding: 0.5rem 0.8rem ;
+    }
+</style>
+
+<p>
+    Nombre del curso: <i>{{curso.nombre}}</i>
+</p>
+
+<p>
+    Camada: <i>{{ curso.camada}}</i> 
+</p>
+
+<p>
+    <a class="busqueda__button" href="{% url 'List' %}">Regresar</a>
+</p>
+
+
+
+{% endblock %}
