--- a/app_coder/templates/app_coder/login.html
+++ b/app_coder/templates/app_coder/login.html
@@ -1,4 +1,28 @@
-<!DOCTYPE html>
+{% extends "app_coder/padre.html" %}
+{% load static %}
+{% block contenidoQueCambia %}
+
+<style>
+    nav{
+        display: none !important;
+    }
+</style>
+
+<h2>{{mensaje}}</h2>
+
+<form action="" method="post">{% csrf_token %}
+    {{form.as_p}}
+
+    <div style="display: flex;align-items: center;justify-content: space-between;">
+        <button type="submit" class="busqueda__button">Iniciar Sesión</button>
+        <a style="text-decoration: none;" class="busqueda__button" href="{% url 'Register' %}">Resgístrate</a>
+
+    </div>
+</form>
+<!-- <h2>{{mensaje}}</h2> -->
+{% endblock %}
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,4 +36,4 @@
         <button type="submit">Iniciar Sesión</button>
     </form>
 </body>
-</html>
+</html> -->
