--- a/app_coder/static/app_coder/css/main.css
+++ b/app_coder/static/app_coder/css/main.css
@@ -13,7 +13,7 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #FF6802;
+    /* background-color: #FF6802; */
 }
 .title {
     color: #fff;
