--- a/app_coder/templates/app_coder/curso_confirm_delete.html
+++ b/app_coder/templates/app_coder/curso_confirm_delete.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso Borrar</title>
-</head>
-<body>
-    <form method="post">{% csrf_token %}
-        ¿Estás seguro que desea borrar el curso {{ object }}
-        <input type="submit" value="submit" name="" id="">
-    </form>
+{% extends "app_coder/padre.html" %}
+{% load static %}
+{% block contenidoQueCambia %}
 
+<form method="post">{% csrf_token %}
+    ¿Estás seguro que desea borrar el curso {{ object }}
+    <br>
+    <input class="busqueda__button" type="submit" value="submit" name="" id="">
+</form>
 
-</body>
-</html>
+{% endblock %}
