--- a/app_coder/templates/app_coder/cursos_list.html
+++ b/app_coder/templates/app_coder/cursos_list.html
@@ -1,27 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Cursos</title>
-</head>
-<body>
-    <h1>Cursos</h1>
-    <a href="{% url 'New' %}">Crear curso</a>
-    <ul>
-        {% for curso in object_list %}
+{% extends "app_coder/padre.html" %}
+{% load static %}
+{% block contenidoQueCambia %}
 
-        <li>
-            <p>Nombre: {{curso.nombre}} </p>
-            <p>
-                <a href="{% url 'Detail' curso.id %}">Ver</a>
-                <a href="{% url 'Edit' curso.id %}">Editar</a>
-                <a href="{% url 'Delete' curso.id %}">Borrar</a>
-            </p>
-        </li>
+<style>
+    .button{
+        text-decoration: none;
+        margin: 1rem;
+        padding: 0.5rem 0.8rem ;
+    }
+    ul{
+        margin: 1rem;
+        list-style: none;
+    }
+    .curso__nombre{
+        font-size: 1.3rem;
+    }
+</style>
 
-        {% endfor %}
-    </ul>
-</body>
-</html>
+<h1>Cursos</h1>
+
+<p>
+    <a class="busqueda__button button" href="{% url 'BusquedaCurso' %}">Buscar curso</a>
+    {% if request.user.is_authenticated %}
+        <a class="busqueda__button button" href="{% url 'New' %}">Crear curso</a>
+    {% endif %}
+
+</p>
+<ul>
+    {% for curso in object_list %}
+
+    <li>
+        <p class="curso__nombre">{{curso.nombre}} {{curso.camada}} </p>
+        <p>
+            <a class="busqueda__button button" href="{% url 'Detail' curso.id %}">Ver</a>
+
+            {% if request.user.is_authenticated %}
+                <a class="busqueda__button button" href="{% url 'Edit' curso.id %}">Editar</a>
+                <a class="busqueda__button button" href="{% url 'Delete' curso.id %}">Borrar</a>
+            {% endif %}
+        </p>
+    </li>
+
+    {% endfor %}
+</ul>
+
+{% endblock %}
