--- a/app_coder/templates/app_coder/editarPerfil.html
+++ b/app_coder/templates/app_coder/editarPerfil.html
@@ -1,23 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Usuario</title>
-</head>
-<body>
-    <h1>Formulario - Editar Perfil</h1>
-    <h2>{{usuario}}</h2>
+{% extends "app_coder/padre.html" %}
+{% load static %}
+{% block contenidoQueCambia %}
 
-    <form action="" method="post"> {% csrf_token %}
-        <table>
+<style>
+    table{
+        margin: 1rem;
+    }
+</style>
 
-            {{ miFormulario.as_table }}
 
-        </table>
+<h1>Formulario - Editar Perfil</h1>
+<h2>{{usuario}}</h2>
 
-        <input type="submit", value="enviar">
-    </form>
-</body>
-</html>
+<form action="" method="post"> {% csrf_token %}
+    <table>
+
+        {{ miFormulario.as_table }}
+
+    </table>
+
+    <input class="busqueda__button" type="submit", value="enviar">
+</form>
+
+
+{% endblock %}
