--- a/app_coder/templates/app_coder/logout.html
+++ b/app_coder/templates/app_coder/logout.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logout</title>
-</head>
-<body>
-    <h1>Te has deslogueado</h1>
-</body>
-</html>
+{% extends "app_coder/padre.html" %}
+{% load static %}
+{% block contenidoQueCambia %}
+<!-- 
+<style>
+    nav{
+        display: none !important;
+    }
+</style> -->
+<h1>Te has deslogueado</h1>
+{% endblock %}
